fix: ArraList был заменён на LinkedList